2011-09-16  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_DECOLONIZE): fix the 2011-07-25 15472 patch
	which broke the native msys/mingw build
	Reported by Dan Stanger <dan.stanger@ieee.org>
	<http://article.gmane.org/gmane.lisp.clisp.devel:22759>

2011-09-14  Sam Steingold  <sds@gnu.org>

	* modules/readline/readline.lisp: include rlconf.h for
	DEFAULT_INPUTRC and SYS_INPUTRC and tilde.h for tilde_expand

2011-09-14  Sam Steingold  <sds@gnu.org>

	* makemake.in (clean5): do not remove modules.h twice

2011-08-29  Sam Steingold  <sds@gnu.org>

	add interface to VerQueryValue, GetFileVersionInfo et al
	http://msdn.microsoft.com/en-us/library/ms647464(v=vs.85).aspx
	* modules/syscalls/calls.c (OS:FILE-VERSION): add function
	* modules/syscalls/posix.lisp (OS:FILE-VERSION): add structure
	* modules/syscalls/configure.in (LIBS): add -lversion

2011-08-29  Sam Steingold  <sds@gnu.org>

	* clisp.rc.in: extract from makemake.in
	* makemake.in (clisp.rc): use it

2011-08-29  Sam Steingold  <sds@gnu.org>

	* makemake.in (MODULE_CPPFLAGS_VAR): remove
	(MODULE_CPPFLAGS): always define and use to avoid adding
	${GNULIB_INCLUDE} to CPPFLAGS twice

2011-08-26  Sam Steingold  <sds@gnu.org>

	* makemake.in (clisp.rc) [win32]: add version information for filever
	http://msdn.microsoft.com/en-us/library/aa381058(v=VS.85).aspx

2011-08-25  Sam Steingold  <sds@gnu.org>

	Report failures in init_language
	* spvw_language.d (init_language): accept lisp_error_p and report
	all failures using either fprintf() or error();
	use classify_namestring on all platforms to check argv_localedir
	(language_deutsch): rename to language_german for consistency
	(language_francais): rename to language_french for consistency
	* i18n.d (SET-CURRENT-LANGUAGE): pass lisp_error_p=true to init_language
	* lispbibl.d (init_language): update the prototype
	(file_kind_t): move here from pathname.d and rename from
	namestring_kind_t
	(classify_namestring): add the prototype