@@ -87,6 +87,7 @@ User visible changes
   + Do not ignore user-supplied print methods for user-defined
     SIMPLE-CONDITIONs (bug#3384825).
   + Better argument checking of FUNCALL on LAMBDA (bug#3384693).
+  + All truenames now have non-NIL version component (bug#3405120).
 
 
 2.49 (2010-07-07)
