@@ -1,3 +1,7 @@
+2011-09-16  Sam Steingold  <sds@gnu.org>
+
+	* path.tst: make sure that truenames have version :newest [bug#3405120]
+
 2011-08-25  Sam Steingold  <sds@gnu.org>
 
 	* ext-clisp.tst (*current-language*): split the test and handle
